src/objects/certificate__c.object
<CustomObject>
    <fields>
        <fullName>CustomerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Certificates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateDue__c</fullName>
        <label>有效截止日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>上传日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QualificationDocument__c</fullName>
        <label>资质文件名称</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>被授权人身份证复印件</fullName>
                    <default>true</default>
                    <label>被授权人身份证复印件</label>
                </value>
                <value>
                    <fullName>签署合同的授权委托书</fullName>
                </value>
                <value>
                    <fullName>医疗器械经营许可证或者备案凭证（二类）</fullName>
                </value>
                <value>
                    <fullName>医疗器械生产许可证（生产企业）复印件（加盖公章）</fullName>
                </value>
                <value>
                    <fullName>营业执照复印件（加盖公章）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>资质文件</label>
    <nameField>
        <displayFormat>ZZ{00000000}</displayFormat>
        <label>资质文件编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>资质文件</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>